--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+    open-in-view: false
 #logging:
 #  level:
 #    org.hibernate.sql: debug
