--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,11 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // 10. TestContainers
+    testImplementation "org.testcontainers:testcontainers:1.17.6"
+    testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
+    testImplementation 'org.testcontainers:mysql:1.17.6'
 }
 
 test {
